# agent_scratch

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: pylint.yml
src/: cli.py  main.py  orchestrator.py  streamlit_ui.py
src/agents/: general_knowledge.py  movie_search.py  person_search.py  query_analyzer.py  response_formatter.py
src/models/: __init__.py  base.py
src/tools/: __init__.py  general_knowledge.py  llm_interface.py  movie_api.py  vector_db.py
